<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loginURL">http://showrss.info/?cs=login</string>
    <string name="hello">Yo cool new show rss mobile app woo</string>
    <string name="app_name">ShowRSS Mobile</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="login">Login</string>
    <string name="loggedInAs">Logged In As:</string>
    <string name="yourShows">Your Shows</string>
    <string name="airedEpisodes">Aired Episodes</string>
    <string name="upcomingEpisodes">Upcoming Episodes</string>
    <string name="aboutButton">About</string>
    <string name="scheduleButton">Schedule</string>

    <string name="exitButton">Exit</string>
    
    <!-- Register Screen -->
    <string name="repeatPassword">Repeat Password: </string>
    <string name="captcha">Please Complete Captcha: </string>
    <string name="register">Register</string>
    <string name="newCaptcha">New Captcha</string>
    
    <!-- Register Errors Screens -->
    <string name="registerErrorTitle">Registration Errors</string>
    
	<!--About screen -->
	<string name="aboutShowRSS">About ShowRSS</string>
	<string name="aboutShowRSSText">showRSS is a service that allows you to keep track of your favorite TV shows. You pick your favorite shows from the list, then you subscribe to your feed. You can subscribe with your torrent client, so latest episodes are automatically downloaded, or add the feed to your browser or feed reader if you want to keep track of latest torrents. Other features also include tracking of your show schedule, so you know exactly when a new episode will air.</string>
	
	<string name="aboutThisApp">About This App</string>
	<string name="aboutThisAppText">The purpose of this app is to provide a native android interface to the showrss.info website. This is an unofficial 3rd party app, the developers have no association with the showrss.info website. All data for this app is being provided by the showrss website. If you enjoy this app please support the showrss website, as there would be no app without it. For more info on how to donate please visit: http://showrss.info/?cs=help&amp;m=donate</string>
	
	<string name="supportOrFeedback">Support or Feedback</string>
	<string name="supportOrFeedbackText">If you are having any issues with the app or have any suggestions of feedback please get in touch! Email: bcg.ladinc@gmail.com Twitter: @witnessmenow</string>
	
    <string name="addNewShow">Add New Shows</string>
    <string name="addNewShows">Add New Shows:</string>
    <string name="addShow">Add Show</string>
        <string name="repack">Repack</string>
    <string name="showconfig">Show Configuration</string>
    <string name="quality">Quality</string>
    
    <!-- 	Do no change the order of these! Setting the current quality on the spinner depends on this order   -->
	<string-array name="qualityTypes">
	    <item>SD</item>
	    <item>HD</item>
	    <item>Both</item>
	</string-array>
	
	<string name="loadSchedule">Loading Schedule…</string>
	
	<string name="showConfigButton">Save Settings</string>
	<string name="logging_in_">Logging in…</string>
	<string name="no_internet_connection">No Internet Connection</string>
	<string name="rememberPassword">Remember Password?</string>

	<string name="password_string">Passwords are stored at the users risk. Please be aware that passwords are currently stored in plain text (within the application). </string>
	<string name="ok_button">OK</string>

	
	<string-array name="feed_qualityTypes">
	    <item>As per show\'s settings</item>
	    <item>All SD</item>
	    <item>All HD</item>
	    <item>All available</item>
	</string-array>
	<string-array name="feed_repackTypes">
	    <item>As per show\'s settings</item>
	    <item>Do not iclude repacks</item>
	    <item>Include repacks</item>
	</string-array>

	    <string name="generateButton">Generate</string>

</resources>