<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/feed_qualityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality" />

    <Spinner
        android:id="@+id/feed_qualitySpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/feed_qualityTypes" />

    <TextView
        android:id="@+id/feed_properRepackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repack" />

    <Spinner
        android:id="@+id/feed_repackSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/feed_repackTypes" />

    <Button
        android:id="@+id/feed_generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minWidth="100dp"
        android:text="@string/generateButton" />

</LinearLayout>