<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            
            <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeatPassword" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/captcha_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captcha" android:paddingTop="25dp" android:paddingBottom="10dp"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center">




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >
            
       	        <ImageView
		            android:id="@+id/captchaImage"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:src="@drawable/captcha_example" android:paddingBottom="5dp"/>
            
            
        </LinearLayout>

    </HorizontalScrollView>

    <EditText
        android:id="@+id/captchaText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="@string/register" android:layout_marginTop="15dp"/>
            
        </LinearLayout>
    </ScrollView>



</LinearLayout>